--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+/Users/vincentbeaulieu/Documents/GitHub/ELEC_445-6671_Final-Project/AR-MATLAB filter=lfs diff=lfs merge=lfs -text
